Car Controller 수정